--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 </a>
                 <nav class="desktop-nav">
                     <a href="index.html" class="nav-link">INICIO</a>
-                    <a href="Nosotros.html" class="nav-link">NOSOTROS</a>
+                    <a href="nosotros.html" class="nav-link">NOSOTROS</a>
                     <a href="menu.html" class="nav-link">MENÚ</a>
-                    <a href="Noticias.html" class="nav-link">NOTICIAS</a>
+                    <a href="noticias.html" class="nav-link">NOTICIAS</a>
                 </nav>
                 <div class="header-actions">
                     <div class="mobile-menu-toggle">
@@ -171,4 +171,5 @@
 
     <script src="js.js"></script>
 </body>
+
 </html>
