--- a/nosotros.html
+++ b/nosotros.html
@@ -23,9 +23,9 @@
                     </a>
                     <nav class="desktop-nav">
                         <a href="index.html" class="nav-link">INICIO</a>
-                        <a href="Nosotros.html" class="nav-link">NOSOTROS</a>
+                        <a href="nosotros.html" class="nav-link">NOSOTROS</a>
                         <a href="menu.html" class="nav-link">MENÚ</a>
-                        <a href="Noticias.html" class="nav-link">NOTICIAS</a>
+                        <a href="noticias.html" class="nav-link">NOTICIAS</a>
                     </nav>
                     <div class="header-actions">
                         <div class="mobile-menu-toggle">
@@ -38,9 +38,9 @@
                 <nav id="mobile-menu" class="mobile-nav hidden">
                     <ul>
                         <li><a href="index.html" class="mobile-nav-link">INICIO</a></li>
-                        <li><a href="Nosotros.html" class="mobile-nav-link">NOSOTROS</a></li>
+                        <li><a href="nosotros.html" class="mobile-nav-link">NOSOTROS</a></li>
                         <li><a href="menu.html" class="mobile-nav-link">MENÚ</a></li>
-                        <li><a href="Noticias.html" class="mobile-nav-link">NOTICIAS</a></li>
+                        <li><a href="noticias.html" class="mobile-nav-link">NOTICIAS</a></li>
                     </ul>
                 </nav>
             </header>
@@ -200,4 +200,5 @@
 
     <script src="js.js"></script>
 </body>
+
 </html>
